--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ packages = find:
 python_requires = >=3.6
 setup_requires = setuptools_scm
 install_requires =
+    pytest-astropy
     astropy
     gwcs
 
