--- a/tox.ini
+++ b/tox.ini
@@ -54,6 +54,8 @@ deps =
     devdeps: git+https://github.com/numpy/numpy.git#egg=numpy
     devdeps: git+https://github.com/astropy/astropy.git#egg=astropy
 
+    {distshare}/tollan-*.gz
+
 # The following indicates which extras_require from setup.cfg will be installed
 extras =
     test
@@ -71,6 +73,23 @@ extras = docs
 commands =
     pip freeze
     sphinx-build -W -b html . _build/html
+
+[testenv:docs]
+depends = build_docs
+description = invoke mkdocs to serve the docs
+extras = {[testenv:build_docs]extras}
+changedir = {toxinidir}
+commands =
+    mkdocs build --clean
+    python -c 'print("###### Starting local server. Press Control+C to stop server ######")'
+    mkdocs serve -a localhost:8888
+
+[testenv:docs-deploy]
+depends = {[testenv:docs]depends}
+description = invoke mkdocs to deploy the docs
+extras = {[testenv:build_docs]extras}
+changedir = {[testenv:docs]changedir}
+commands = mkdocs gh-deploy --clean
 
 [testenv:linkcheck]
 changedir = docs
