--- a/setup.cfg
+++ b/setup.cfg
@@ -14,17 +14,18 @@ github_project = toltec-astro/kidsproc
 [options]
 zip_safe = False
 packages = find:
-python_requires = >=3.6
+python_requires = >=3.7
 setup_requires = setuptools_scm
 install_requires =
     pytest-astropy
     astropy
     gwcs
     asdf
+    cached_property
 
 [options.entry_points]
 asdf_extensions =
-    kidsdata = kidsproc.kidsdata.extension:KidsDataExtension
+    kidsdata = kidsproc.kidsdata.asdf.extension:KidsDataExtension
 bandit.formatters =
     bson = bandit_bson:formatter
 
